--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   image_picker: ^1.0.7
   google_mlkit_barcode_scanning: ^0.11.0
   flutter_secure_storage: ^9.0.0
+  intl: ^0.19.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
