--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,18 +30,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_riverpod: ^2.5.1
+  flutter_riverpod: ^2.6.1
   http: ^1.2.1
   image_picker: ^1.0.7
-  google_mlkit_barcode_scanning: ^0.11.0
-  flutter_secure_storage: ^9.0.0
-  intl: ^0.19.0
+  google_mlkit_barcode_scanning: ^0.14.1
+  flutter_secure_storage: ^10.0.0
+  intl: ^0.20.2
+  health: ^13.2.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  csv: ^5.0.1
-  fl_chart: ^0.63.0
+  csv: ^6.0.0
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +53,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^5.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
