--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@ linux/flutter/generated_plugins.cmake/
 macos/Flutter/GeneratedPluginRegistrant.swift
 windows/flutter/generated_plugin_registrant.cc
 windows/flutter/generated_plugins.cmake
+
+lib/firebase_options.dart
