--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,7 @@ windows/flutter/generated_plugin_registrant.cc
 windows/flutter/generated_plugins.cmake
 
 lib/firebase_options.dart
+
+# iOS related
+**/Pods/
+ios/Podfile.lock
