--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
@@ -24,6 +26,18 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSCameraUsageDescription</key>
+	<string>This app needs camera access to scan food labels and insulin information</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>This app needs photo library access to select images for analysis</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app does not use the microphone</string>
+	<key>NSHealthShareUsageDescription</key>
+	<string>This app needs access to your health data to track blood glucose levels, steps, heart rate, and other health metrics for diabetes management.</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>This app needs permission to save health data like blood glucose readings and activity logs to your Health app.</string>
+	<key>UIApplicationSupportsIndirectInputEvents</key>
+	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -41,13 +55,5 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
-	<key>CADisableMinimumFrameDurationOnPhone</key>
-	<true/>
-	<key>UIApplicationSupportsIndirectInputEvents</key>
-	<true/>
-	<key>NSHealthShareUsageDescription</key>
-	<string>This app needs access to your health data to track blood glucose levels, steps, heart rate, and other health metrics for diabetes management.</string>
-	<key>NSHealthUpdateUsageDescription</key>
-	<string>This app needs permission to save health data like blood glucose readings and activity logs to your Health app.</string>
 </dict>
 </plist>
