--- a/ios/Podfile
+++ b/ios/Podfile
@@ -41,6 +41,10 @@ post_install do |installer|
     
     target.build_configurations.each do |config|
       config.build_settings['BUILD_LIBRARY_FOR_DISTRIBUTION'] = 'YES'
+      config.build_settings['ENABLE_BITCODE'] = 'NO'
+      config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '16.0'
+      # Ensure frameworks are built
+      config.build_settings['ONLY_ACTIVE_ARCH'] = 'NO'
     end
   end
 end
